--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Biografia - João da Silva</title>
+		<title>Biografia do João da Silva</title>
 		<meta charset="utf-8">
 		<link rel="icon" href="favicon.png">
 		<link rel="stylesheet" href="reset.css">
