Adicionando um item na lista

--- a/bio.html
+++ b/bio.html
@@ -55,6 +55,8 @@
 					<li><a href="bio.html">Sobre mim</a></li>
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="contato.html">Contato</a></li>
+					<li><a href="adicionais.html">Mais</a></li>
+
 				</ul>
 			</nav>
 
